--- a/frontend/folder-structure/package.json
+++ b/frontend/folder-structure/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "cra-template": "1.2.0",
+    "folder-structure": "file:",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
